# shizuku_kernel

./: CMakeLists.txt  README.md
Untitled/: operation_result.hpp
config/: CMakeLists.txt  config_template.hpp
config/cpu_arch/: CMakeLists.txt
config/interface/shizuku/kernel/: config.hpp
config/platform/: CMakeLists.txt
config/platform/pico_sdk/: CMakeLists.txt
include/shizuku/kernel/: cpu_driver_interface.hpp  cpu_manager.hpp  interface_interceptor.hpp  kernel.hpp  memory_manager_interface.hpp  thread.hpp
include/shizuku/kernel/cpu_manager/: task.hpp
include/shizuku/kernel/interfaces/: cpu_driver_interface.hpp  interface_interceptor.hpp  memory_manager_interface.hpp
interface/shizuku/: operation_result.hpp  thread.hpp
kernel/: kernel.hpp  method.hpp
src/: CMakeLists.txt
src/cpu_manager/: CMakeLists.txt  constructor.cpp  init.cpp  schedule.cpp
src/ini/: CMakeLists.txt  init.cpp
src/platform/: CMakeLists.txt
src/platform/pico_sdk/: CMakeLists.txt
src/platform/pico_sdk/include/shizuku/kernel/cpu_arch/: rp2040.hpp
src/platform/pico_sdk/include/shizuku/kernel/platform/: pico_sdk.hpp
src/platform/pico_sdk/main/: CMakeLists.txt  main.cpp
src/platform/pico_sdk/rp2040/: CMakeLists.txt  rp2040.cpp
src/platform/pico_sdk/rp2040/include/shizuku/kernel/cpu_arch/: rp2040.hpp
toolchains/: afterload_toolchain.cmake  pico_add_extra_outputs.cmake  pico_sdk_import.cmake  preload_toolchain.cmake
